wide spacing solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,6 @@ header {
     background-color: #F9FDFD;
 }
 
-.header-image {
-    
-}
-
 .header-menu {
     display: flex;
     gap: 32px;
@@ -308,23 +304,43 @@ footer {
         font-size: 12px;
     }
 
+    .widget {
+        max-width: 320px;
+        padding-left: -20px;
+    }
+
+    .widget_title_text {
+        margin-left: 5px;
+    }
+
     .widget_body {
         flex-direction: column;
         max-width: 300px;
     }
 
+    section {
+        max-width: 300px;
+    }
+
     article .news_thumbnail {
         max-width: 250px;
+        margin-left: 10px;
     }
 
     article .news_title {
         max-width: 250px;
         font-size: 24px;
+        margin-left: 10px;
     }
 
     article .news_resume {
         max-width: 250px;
         font-size: 14px;
+        margin-left: 10px;
+    }
+
+    #regular-content {
+        margin-left: 0;
     }
 
     footer {
@@ -343,9 +359,27 @@ footer {
     }
 
     .main-content-text-title {
+        font-size: 24px;
+        margin-top: 12px;
+    }
+
+    .main-content-text-sub-title {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .main-content-text a {
+        text-align: center;
+    }
+
+    .main-content-image {
+        max-width: 300px;
+    }
+    .main-content-text-title {
         font-size: 32px;
         margin-top: 12px;
         text-align: center;
+        justify-content: center;
     }
 
     .main-content-text-sub-title {
@@ -358,17 +392,42 @@ footer {
     }
 
     .main-content-image {
-        max-width: 350px;
+        max-width: 400px;
+    }
+
+    section {
+        max-width: 400px;
     }
 
     .secondary-content-paragraph {
         text-align: center;
-        font-size: 12px;
+        font-size: 18px;
     }
 
     .widget {
         flex-direction: column;
         max-width: 350px;
+    }
+
+    #regular-content {
+        margin-left: 0;
+    }
+
+    article .news_thumbnail {
+        max-width: 350px;
+        margin-left: 10px;
+    }
+
+    article .news_title {
+        max-width: 350px;
+        font-size: 24px;
+        margin-left: 10px;
+    }
+
+    article .news_resume {
+        max-width: 350px;
+        font-size: 16px;
+        margin-left: 10px;
     }
 
     footer {
@@ -400,5 +459,13 @@ footer {
 
     .secondary-content-paragraph {
         text-align: center;
+    }
+
+    section {
+        max-width: 700px;
+    }
+
+    article .news_resume {
+        font-size: 18px;
     }
 }
